Completed s3 Bucket resume upload

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -23,5 +23,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["src", "../server/src/services/s3Bucket.ts"]
 }
