--- a/client/package.json
+++ b/client/package.json
@@ -18,19 +18,26 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "assert": "^2.1.0",
     "aws-sdk": "^2.1654.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
+    "https-browserify": "^1.0.0",
     "lucide-react": "^0.397.0",
+    "os-browserify": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
     "react-router-dom": "^6.24.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "url": "^0.11.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
