--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
   "author": "Jason Richard Kendrick A",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.609.0",
+    "@aws-sdk/s3-request-presigner": "^3.609.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -26,7 +28,9 @@
     "drizzle-orm": "^0.31.2",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "postgres": "^3.4.4",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -35,6 +39,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
+    "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.22.8",
     "pg": "^8.12.0",
     "ts-node-dev": "^2.0.0",
